projects now scale correctly on smallest screen 320x568

--- a/src/components/Project/Project.module.css
+++ b/src/components/Project/Project.module.css
@@ -80,12 +80,53 @@
   }
 }
 
-@media (max-height: 768px) {
+@media (max-height: 568px), (max-width: 400px) {
   .MainContentWrapper p {
-    font-size: 2vh;
+    padding: 2px 10px 2px 10px;
+    font-size: 0.8em;
   }
   .MainContentWrapper ul {
-    font-size: 2vh;
+    font-size: 0.8em;
+  }
+  .MainContentWrapper h2 {
+    padding: 2px 10px 2px 10px;
+    font-size: 1.2em;
+  }
+  .MainContentWrapper h3 {
+    padding: 2px 10px 2px 10px;
+    font-size: 1em;
+  }
+  .IconImage {
+    width: 20px;
+  }
+  .MainContentWrapper img {
+    height: 100px;
+  }
+  .MainContentWrapper {
+    padding: 0px 5px 0px 5px;
+  }
+}
+
+@media (max-height: 768px), (max-width: 400px) {
+  .MainContentWrapper p {
+    font-size: 0.8em;
+  }
+  .MainContentWrapper ul {
+    font-size: 0.8em;
+  }
+  .MainContentWrapper h2 {
+
+    font-size: 1.2em;
+  }
+  .MainContentWrapper h3 {
+
+    font-size: 1em;
+  }
+  .IconImage {
+    width: 20px;
+  }
+  .MainContentWrapper img {
+    height: 120px;
   }
 }
 
